@@ -208,150 +208,76 @@ $(function() {
             return [
                 '<h3><a href="#">' + _("Health and Identification") + ' <span id="tabhealth" style="display: none" class="asm-icon asm-icon-health"></span></a></h3>',
                 '<div>',
-                '<div class="row">',
-                // tested flags
-                '<div class="col-sm">',
-                // tested flags
-                '<table>',
-                '<tr id="microchiprow">',
-                '<td nowrap="nowrap">',
-                '<input class="asm-checkbox" type="checkbox" id="microchipped" data-json="IDENTICHIPPED" data-post="microchipped" />',
-                '<label for="microchipped">' + _("Microchipped") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="microchipdate" data-json="IDENTICHIPDATE" data-post="microchipdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td>',
-                '<input type="text" id="microchipnumber" data-json="IDENTICHIPNUMBER" data-post="microchipnumber" class="asm-textbox" maxlength="15" placeholder="' + html.title(_("Number")) + '" /> <span id="microchipbrand"></span> <button id="button-microchipcheck">' + microchip.check_site_name() + '</button>',
-                '</td>',
-                '</tr>',
-                '<tr id="microchiprow2">',
-                '<td nowrap="nowrap"></td>',
-                '<td>',
-                '<input id="microchipdate2" data-json="IDENTICHIP2DATE" data-post="microchipdate2" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td>',
-                '<input type="text" id="microchipnumber2" data-json="IDENTICHIP2NUMBER" data-post="microchipnumber2" class="asm-textbox" maxlength="15" placeholder="' + html.title(_("Number")) + '" /> <span id="microchipbrand2"></span> <button id="button-microchipcheck2">' + microchip.check_site_name() + '</button>',
-                '</td>',
-                '</tr>',
-                '<tr id="tattoorow">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="tattoo" data-json="TATTOO" data-post="tattoo" />',
-                '<label for="tattoo">' + _("Tattoo") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="tattoodate" data-json="TATTOODATE" data-post="tattoodate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td>',
-                '<input type="text" id="tattoonumber" data-json="TATTOONUMBER" data-post="tattoonumber" class="asm-textbox" placeholder="' + html.title(_("Number")) + '" />',
-                '</td>',
-                '</tr>',
-                '<tr id="smarttagrow">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="smarttag" data-json="SMARTTAG" data-post="smarttag" />',
-                '<label for="smarttag">' + _("SmartTag PETID") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="smarttagnumber" data-json="SMARTTAGNUMBER" data-post="smarttagnumber" class="asm-halftextbox asm-alphanumberbox" placeholder="' + html.title(_("Number")) + '" />',
-                '</td>',
-                '<td>',
-                '<select class="asm-selectbox" id="smarttagtype" data-json="SMARTTAGTYPE" data-post="smarttagtype">',
-                '<option value="0">' + _("Annual") + '</option>',
-                '<option value="1">' + _("5 Year") + '</option>',
-                '<option value="2">' + _("Lifetime") + '</option>',
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr id="neuteredrow">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="neutered" data-json="NEUTERED" data-post="neutered" />',
-                '<label for="neutered">' + _("Altered") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="neutereddate" data-json="NEUTEREDDATE" data-post="neutereddate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td valign="top">',
-                '<input id="neuteringvet" data-json="NEUTEREDBYVETID" data-post="neuteringvet" data-mode="brief" data-filter="vet" type="hidden" class="asm-personchooser" />',
-                '</td>',
-                '</tr>',
-                '<tr id="declawedrow" class="cats">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="declawed" data-json="DECLAWED" data-post="declawed" />',
-                '<label id="declawed-label" for="declawed">' + _("Declawed") + '</label>',
-                '</td>',
-                '</tr>',
-                '<tr id="heartwormrow" class="dogs">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="heartwormtested" data-json="HEARTWORMTESTED" data-post="heartwormtested" />',
-                '<label for="heartwormtested">' + _("Heartworm Tested") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="heartwormtestdate" data-json="HEARTWORMTESTDATE" data-post="heartwormtestdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td>',
-                '<select class="asm-selectbox" id="heartwormtestresult" data-json="HEARTWORMTESTRESULT" data-post="heartwormtestresult">',
-                html.list_to_options(controller.posneg, "ID", "NAME"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr id="fivlrow" class="cats">',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="fivltested" data-json="COMBITESTED" data-post="fivltested" />',
-                '<label for="fivltested">' + _("FIV/L Tested") + '</label>',
-                '</td>',
-                '<td>',
-                '<input id="fivltestdate" data-json="COMBITESTDATE" data-post="fivltestdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
-                '</td>',
-                '<td>',
-                '<select class="asm-halftextbox selectbox" id="fivresult" data-json="COMBITESTRESULT" data-post="fivresult">',
-                html.list_to_options(controller.posneg, "ID", "NAME"),
-                '</select>',
-                '<select class="asm-halftextbox selectbox" id="flvresult" data-json="FLVRESULT" data-post="flvresult">',
-                html.list_to_options(controller.posneg, "ID", "NAME"),
-                '</select>',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td>',
-                '<input class="asm-checkbox" type="checkbox" id="specialneeds" data-json="HASSPECIALNEEDS" data-post="specialneeds" title="' + _("This animal has special needs") + '"  />',
-                '<label for="specialneeds">' + _("Special Needs") + '</label>',
-                '</td>',
-                '</tr>',
-                '</table>',
-                // separate table for additional fields
-                '<table>',
-                '<tr id="rabiestagrow" class="cats dogs">',
-                '<td><label for="rabiestag">' + _("Rabies Tag") + '</label></td>',
-                '<td><input id="rabiestag" data-json="RABIESTAG" data-post="rabiestag" class="asm-textbox" maxlength="20" />',
-                '</td>',
-                '</tr>',
-                additional.additional_fields_linktype(controller.additional, 5),
-                '</table>',
-                '</div>', // col
-                // health problems/vet fields
-                '<div class="col-sm">',
-                '<label for="healthproblems">' + _("Health Problems") + '</label><br />',
-                '<textarea id="healthproblems" data-json="HEALTHPROBLEMS" data-post="healthproblems" class="asm-textarea" rows="4"></textarea>',
-                '<table>',
-                '<tr>',
-                '<td valign="top" class="bottomborder">',
-                '<label for="currentvet">' + _("Current Vet") + '</label>',
-                '</td>',
-                '<td valign="top" class="bottomborder">',
-                '<input id="currentvet" data-json="CURRENTVETID" data-post="currentvet" type="hidden" data-filter="vet" class="asm-personchooser" />',
-                '</td>',
-                '</tr>',
-                '<tr>',
-                '<td valign="top">',
-                '<label for="ownersvet">' + _("Owners Vet") + '</label>',
-                '</td>',
-                '<td valign="top">',
-                '<input id="ownersvet" data-json="OWNERSVETID" data-post="ownersvet" type="hidden" data-filter="vet" class="asm-personchooser"  />',
-                '</td>',
-                '</tr>',
-                '</table>',
-                '</div>', // col
-                '</div>', // row
+                tableform.fields_render([
+                    { rowid: "microchiprow", type: "raw", 
+                        label: tableform.render_check({ post_field: "microchipped", json_field: "IDENTICHIPPED", label: _("Microchipped"), justwidget: true }), 
+                        markup: [
+                        '<input id="microchipdate" data-json="IDENTICHIPDATE" data-post="microchipdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<input type="text" id="microchipnumber" data-json="IDENTICHIPNUMBER" data-post="microchipnumber" class="asm-textbox" maxlength="15" placeholder="' + html.title(_("Number")) + '" />',
+                        '<span id="microchipbrand"></span> <button id="button-microchipcheck">' + microchip.check_site_name() + '</button>'
+                    ].join("\n") },
+                    { rowid: "microchiprow2", type: "raw", label: "", markup: [
+                        '<input id="microchipdate" data-json="IDENTICHIP2DATE" data-post="microchipdate2" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<input type="text" id="microchipnumber2" data-json="IDENTICHIP2NUMBER" data-post="microchipnumber" class="asm-textbox" maxlength="15" placeholder="' + html.title(_("Number")) + '" />',
+                        '<span id="microchipbrand2"></span> <button id="button-microchipcheck2">' + microchip.check_site_name() + '</button>'
+                    ].join("\n") },
+                    { rowid: "tattoorow", type: "raw", 
+                        label: tableform.render_check({ post_field: "tattoo", json_field: "TATTOO", label: _("Tattoo"), justwidget: true }), 
+                        markup: [
+                        '<input id="tattoodate" data-json="TATTOODATE" data-post="tattoodate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<input type="text" id="tattoonumber" data-json="TATTOONUMBER" data-post="tattoonumber" class="asm-textbox" placeholder="' + html.title(_("Number")) + '" />',
+                    ].join("\n") },
+                    { rowid: "smarttagrow", type: "raw", 
+                        label: tableform.render_check({ post_field: "smarttag", json_field: "SMARTTAG", label: _("SmartTag PETID"), justwidget: true }), 
+                        markup: [
+                        '<input id="smarttagnumber" data-json="SMARTTAGNUMBER" data-post="smarttagnumber" class="asm-halftextbox asm-alphanumberbox" placeholder="' + html.title(_("Number")) + '" />',
+                        '<select class="asm-selectbox" id="smarttagtype" data-json="SMARTTAGTYPE" data-post="smarttagtype">',
+                        '<option value="0">' + _("Annual") + '</option>',
+                        '<option value="1">' + _("5 Year") + '</option>',
+                        '<option value="2">' + _("Lifetime") + '</option>',
+                        '</select>',
+                    ].join("\n") },
+                    { rowid: "neuteredrow", type: "raw", rowclasses: "topvalign",
+                        label: tableform.render_check({ post_field: "neutered", json_field: "NEUTERED", label: _("Altered"), justwidget: true }), 
+                        markup: [
+                        '<input id="neutereddate" data-json="NEUTEREDDATE" data-post="neutereddate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<input id="neuteringvet" data-json="NEUTEREDBYVETID" data-post="neuteringvet" data-mode="brief" data-filter="vet" type="hidden" class="asm-personchooser" />',
+                    ].join("\n") },
+                    { rowid: "declawedrow", rowclasses: "cats", type: "raw", markup: "",
+                        label: tableform.render_check({ post_field: "declawed", json_field: "DECLAWED", label: _("Declawed"), justwidget: true }) }, 
+                    { rowid: "heartwormrow", rowclasses: "dogs", type: "raw", 
+                        label: tableform.render_check({ post_field: "heartwormtested", json_field: "HEARTWORMTESTED", label: _("Heartworm Tested"), justwidget: true }), 
+                        markup: [
+                        '<input id="heartwormtestdate" data-json="HEARTWORMTESTDATE" data-post="heartwormtestdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<select class="asm-selectbox" id="heartwormtestresult" data-json="HEARTWORMTESTRESULT" data-post="heartwormtestresult">',
+                        html.list_to_options(controller.posneg, "ID", "NAME"),
+                        '</select>',
+                    ].join("\n") },
+                    { rowid: "fivlrow", rowclasses: "cats", type: "raw", 
+                        label: tableform.render_check({ post_field: "fivltested", json_field: "COMBITESTED", label: _("FIV/L Tested"), justwidget: true }), 
+                        markup: [
+                        '<input id="fivltestdate" data-json="COMBITESTDATE" data-post="fivltestdate" class="asm-halftextbox asm-datebox" placeholder="' + html.title(_("Date")) + '" />',
+                        '<select class="asm-halftextbox selectbox" id="fivresult" data-json="COMBITESTRESULT" data-post="fivresult">',
+                        html.list_to_options(controller.posneg, "ID", "NAME"),
+                        '</select>',
+                        '<select class="asm-halftextbox selectbox" id="flvresult" data-json="FLVRESULT" data-post="flvresult">',
+                        html.list_to_options(controller.posneg, "ID", "NAME"),
+                        '</select>',
+                    ].join("\n") },
+                    { type: "raw", markup: "",
+                        label: tableform.render_check({ post_field: "specialneeds", json_field: "HASSPECIALNEEDS", label: _("Special Needs"), justwidget: true }) }, 
+                    { post_field: "rabiestag", json_field: "RABIESTAG", label: _("Rabies Tag"), type: "text", 
+                        maxlength: "20", rowclasses: "cats dogs" },
+
+                    { type: "additional", markup: additional.additional_fields_linktype(controller.additional, 5) },
+                    { type: "nextcol" },
+
+                    { post_field: "healthproblems", json_field: "HEALTHPROBLEMS", label: _("Health Problems"), 
+                        labelpos: "above", type: "textarea", rows: "4" },
+
+                    { post_field: "currentvet", json_field: "CURRENTVETID", label: _("Current Vet"), type: "person", personfilter: "vet" },
+                    { post_field: "ownersvet", json_field: "OWNERSVETID", label: _("Owners Vet"), type: "person", personfilter: "vet" }
+                ]),
                 '</div>', // end accordion section
             ].join("\n");
         },
