@@ -1,6 +1,7 @@
 49
 ================
 
+28/08/24 Refactor health and identification #1103
 23/08/24 PetFBI: switch to send stray/holds instead of adoptable animals
 23/08/24 Refactor/simplify rendering of additional fields #1103
 22/08/24 Export animals as CSV: Include ANIMALID column for cross referencing
